[package]
name = "qwest"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
dirs = "5"
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
rhai = "1.19"
anyhow = "1"
thiserror = "1"
regex = "1"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
